# sof2plus-engine

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
cmake/: identity.cmake  server.cmake  shared_sources.cmake
cmake/compilers/: appleclang.cmake  gcc.cmake  gnu.cmake  msvc.cmake
cmake/libraries/: all.cmake  zlib.cmake
cmake/utils/: arch.cmake
code/asm/: ftola.c  snapvector.c  vm_x86_64.asm
code/botlib/: be_aas.h  be_aas_bspq3.c  be_aas_file.c  be_aas_main.h  be_aas_reach.c  be_ai_char.c  be_ai_chat.c  be_ai_goal.c  be_ai_weap.c  be_ai_weight.c  be_ea.c  be_ea.h  be_interface.c  botlib.h  l_log.h  l_precomp.c  l_precomp.h  l_script.c  l_script.h  l_struct.c
code/game/: bg_public.h  bg_weapons.h  g_public.h  inv.h
code/gametype/: gt_public.h
code/null/: mac_net.c
code/qcommon/: cm_load.c  cm_local.h  cm_patch.h  cm_public.h  cm_test.c  cm_trace.c  cmd.c  common.c  cvar.c  files.c  genericparser2.c  msg.c  net_chan.c  net_ip.c  q_platform.h  q_shared.c  q_shared.h  qcommon.h  qfiles.h  vm.c  vm_armv7l.c  vm_interpreted.c  vm_local.h  vm_powerpc.c  vm_sparc.c  vm_x86.c
code/rd-dedicated/: tr_g2_api.c  tr_image_png.c  tr_local.h  tr_model.c  tr_shader.c
code/server/: server.h  sv_bot.c  sv_ccmds.c  sv_client.c  sv_game.c  sv_gametype.c  sv_init.c  sv_main.c  sv_net_chan.c  sv_snapshot.c  sv_world.c
code/sys/: con_tty.c  sys_local.h  sys_main.c  sys_osx.m  sys_unix.c  sys_win32.c  win_resource.rc
misc/: s2pserver.cfg
misc/msvc14/: sof2plus-engine.sln  sof2plus-engine.vcxproj  sof2plus-engine.vcxproj.filters
